--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
    "dependencies": {
       "body-parser": "^1.19.1",
       "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
       "express": "^4.17.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "rxjs": "^7.5.7",
       "typeorm": "0.3.10"
    },
    "scripts": {
